Add mais um get, arrumando os erros de termos e ajustando o swagger
