# src/models/cestasSolidariasSchema.js
@@ -6,6 +6,10 @@ const userSchema = new mongoose.Schema({
         type: String,
         required: true
     }, 
+    nickname: {
+        type: String,
+        required: true
+    },
     email: {
         type: String,
         required: true,
